--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "A simple state global store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/test.js"
   },
   "author": "Caio Lesnock <caio.dev@outlook.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "sucrase": "^3.12.1"
+  }
 }
