--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/Lesnock/simple-store"
   },
+  "publishConfig": {
+      "access": "public"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "dev": "nodemon src/test.js",
