--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lesnock/simple-store",
   "version": "1.0.1",
   "description": "A reactive store of data for global state management in JS",
-  "main": "index.js",
+  "main": "build/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Lesnock/simple-store"
