--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "type": "git",
     "url": "https://github.com/Lesnock/simple-store"
   },
+  "keywords": [
+    "javascript",
+    "store",
+    "management",
+    "state",
+    "global state"
+  ],
   "publishConfig": {
     "access": "public"
   },
