--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lesnock/simple-store",
   "version": "1.1.3",
   "description": "A reactive store of data for global state management in JS",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Lesnock/simple-store"
@@ -25,14 +25,12 @@
   "author": "Caio Lesnock <caio.dev@outlook.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-minify": "^0.5.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2",
     "np": "^6.2.0",
-    "sucrase": "^3.12.1"
+    "sucrase": "^3.12.1",
+    "typescript": "^4.0.3"
   }
 }
